# geno-2

./: .cursorignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  _headers  control.html  index.html  offline.html  package-lock.json  package.json  sentry.js  web-test.js  worker.js  wrangler.toml
.cursor/rules/: project-rules.mdc
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  diagrams.yml
docs/: ARCHITECTURE.md  BACKLOG.md  NETWORKED_PERFORMANCE.md  SPEC.md  TODO.md
docs/diagrams/: README.md  audio-graph.dot  frame-loop.dot  networked-control.dot  system-overview.dot
scripts/: cf-relay-test.mjs  check-diagrams.mjs  display-test.mjs  gen-env.js  relay-protocol.mjs  relay-test.mjs  relay.mjs  render-diagrams.mjs  render-offline.mjs
shaders/: post.wgsl  waves.wgsl
src/: audio.rs  camera.rs  constants.rs  control.rs  dom.rs  frame.rs  input.rs  instrument.rs  lib.rs  offline.rs  overlay.rs  perf.rs  render.rs  wasm_app.rs
src/core/: mod.rs  music.rs
src/events/: keyboard.rs  keymap.rs  mod.rs  pointer.rs
src/render/: helpers.rs  post.rs  targets.rs  waves.rs
tests/: input_tests.rs  keyboard_tests.rs  multitouch_tests.rs  music_tests.rs
